# daily_hn

./: .gitignore  .pylintrc  Makefile  Parse_script.py  README.md  curses_ui.py  daily-hn.py  daily_hn.py  main.py  parse_script.py  pyproject.toml  requirements.txt  stories.py  tox.ini
.github/workflows/: publish.yml  testing.yml  tests.yml
hacker-news-webscraper/: main.py  parse_script.py
tests/: test_daily_hn.py
