[tool.poetry]
name = "daily_hn"
version = "0.1.2"
readme="README.md"
description = "A command line tool for displaying and opening links to the current best stories from news.ycombinator.com (Hacker News)"
authors = ["Rolv-Apneseth <rolv.apneseth@gmail.com>"]
homepage = "https://github.com/Rolv-Apneseth/daily_hn/"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
types-requests = "^2.27.9"
types-beautifulsoup4 = "^4.10.11"
pytest = "^7.0.0"
codespell = "^2.1.0"
pylint = "^2.12.2"

[tool.poetry.scripts]
daily_hn = "daily_hn:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
